Total Debugging Refactor