@@ -1,4 +1,4 @@
-package fr.hardel.asset_editor.client.javafx.lib.debug;
+package fr.hardel.asset_editor.client.debug;
 
 import java.util.List;
 import java.util.Map;
@@ -12,7 +12,7 @@ public final class DebugLogStore {
     }
 
     public enum Category {
-        SYNC, NETWORK, LIFECYCLE, ACTION
+        SYNC, LIFECYCLE, ACTION
     }
 
     public record Entry(long id, long timestamp, Level level, Category category, String message, Map<String, String> data) {}
@@ -27,19 +27,15 @@ public final class DebugLogStore {
     }
 
     public static void log(Level level, Category category, String message, Map<String, String> data) {
-        Entry entry = new Entry(ID_GENERATOR.incrementAndGet(), System.currentTimeMillis(), level, category, message, Map.copyOf(data));
-        ENTRIES.add(0, entry);
+        ENTRIES.addFirst(new Entry(ID_GENERATOR.incrementAndGet(), System.currentTimeMillis(), level, category, message, Map.copyOf(data)));
         while (ENTRIES.size() > MAX_ENTRIES)
-            ENTRIES.remove(ENTRIES.size() - 1);
-        LISTENERS.forEach(Runnable::run);
+            ENTRIES.removeLast();
+
+        notifyListeners();
     }
 
     public static List<Entry> entries() {
         return List.copyOf(ENTRIES);
-    }
-
-    public static List<Entry> entriesByCategory(Category category) {
-        return ENTRIES.stream().filter(e -> e.category() == category).toList();
     }
 
     public static int size() {
@@ -48,19 +44,16 @@ public final class DebugLogStore {
 
     public static void clear() {
         ENTRIES.clear();
-        LISTENERS.forEach(Runnable::run);
-    }
-
-    public static void clearCategory(Category category) {
-        if (category == null)
-            return;
-        ENTRIES.removeIf(entry -> entry.category() == category);
-        LISTENERS.forEach(Runnable::run);
+        notifyListeners();
     }
 
     public static Runnable subscribe(Runnable listener) {
         LISTENERS.add(listener);
         return () -> LISTENERS.remove(listener);
+    }
+
+    private static void notifyListeners() {
+        LISTENERS.forEach(Runnable::run);
     }
 
     private DebugLogStore() {}
